VZDEV/src/objects/CCPM_callDetails__c.object
<CustomObject>
    <fields>
        <fullName>CCPM_IVRID__c</fullName>
        <label>IVR ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_callDuration__c</fullName>
        <formula>MINUTE(TIMEVALUE(CCPM_callEndTime__c)) - MINUTE(TIMEVALUE(CCPM_callStartTime__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Duration(In Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPM_callEndTime__c</fullName>
        <label>Call End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_callLog__c</fullName>
        <label>Call Log</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_callStartTime__c</fullName>
        <label>Call Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_callStatus__c</fullName>
        <label>Call Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call In-Progress</fullName>
                </value>
                <value>
                    <fullName>Call Complete</fullName>
                </value>
                <value>
                    <fullName>Response Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_correlationID__c</fullName>
        <label>Correlation ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Call Details</relationshipLabel>
        <relationshipName>Call_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Call Details</label>
    <listViews>
        <fullName>CCPM_allCalls</fullName>
        <columns>NAME</columns>
        <columns>CCPM_correlationID__c</columns>
        <columns>CCPM_IVRID__c</columns>
        <columns>CCPM_callStartTime__c</columns>
        <columns>CCPM_callEndTime__c</columns>
        <columns>CCPM_callDuration__c</columns>
        <columns>CCPM_callStatus__c</columns>
        <columns>CCPM_callLog__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Calls</label>
    </listViews>
    <nameField>
        <displayFormat>CD-{000000}</displayFormat>
        <label>Call Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>